# BarcelonaReverbera

./: BarcelonaReverbera.code-workspace  LICENSE  README.md
ConvertWavsToCArray/: .gitignore  ConvertWavsToCArray.py
build_scripts/: build_debug.sh  build_release.sh  get_pffft.sh
convert_wav_to_c_array/: convert_wav_to_c_array.py
external_libraries/libsamplerate/: .gitignore  libsamplerate_build.sh
src/: .gitignore
src/BarcelonaReverbera/: BarcelonaReverberaPluginEditor.cpp  BarcelonaReverberaPluginEditor.h  BarcelonaReverberaPluginProcessor.cpp  BarcelonaReverberaPluginProcessor.h
src/BarcelonaReverbera/ConvolutionReverb/: ConvolutionReverb.cpp  ConvolutionReverb.h  ConvolutionReverbCommon.h
src/BarcelonaReverbera/ConvolutionReverb/ConvolutionEngine/: ConvolutionEngine.h  ConvolutionEngineDirectStage.h  ConvolutionEngineFftStage.h
src/BarcelonaReverbera/ConvolutionReverb/DspThread/: DspThread.h
src/BarcelonaReverbera/ConvolutionReverb/Fft/: Fft.h
src/BarcelonaReverbera/ConvolutionReverb/FilterBiquad/: FilterBiquad.cpp  FilterBiquad.h
src/BarcelonaReverbera/ConvolutionReverb/ImpulseResponses/: IrBuffersAutoGenerated.h
src/BarcelonaReverbera/ConvolutionReverb/SamplerateConverter/: SamplerateConverter.cpp  SamplerateConverter.h
src/BarcelonaReverbera/ImageDescriptions/: ImageDescriptions.h
vst3/: CMakeLists.txt
vst3/resource/: barcelona_reverbera_editor.uidesc  win32resource.rc
vst3/src/: barcelona_reverbera_cids.h  barcelona_reverbera_controller.cpp  barcelona_reverbera_controller.h  barcelona_reverbera_entry.cpp  barcelona_reverbera_processor.cpp  barcelona_reverbera_processor.h  barcelona_reverbera_version.h
vst3/src/convolution_reverb/: convolution_reverb.h  convolution_reverb_direct_stage.h  convolution_reverb_fft_stage.h
vst3/src/fft/: fft.h
vst3/src/impulse_responses/: IR_DELAY.h  IR_DELTA.h  IR_example.h  impulse_responses.cpp  impulse_responses.h
vst3/src/samplerate_converter/: samplerate_converter.cpp  samplerate_converter.h
